<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.2.7.RELEASE</version>
    </parent>
    <groupId>com.jakubeeee.iotaccess</groupId>
    <artifactId>parent</artifactId>
    <version>1.0-SNAPSHOT</version>
    <description>Parent module for aggregation of common configuration and dependencies</description>
    <packaging>pom</packaging>

    <modules>
        <module>plugin-api</module>
        <module>core</module>
        <module>assembly</module>
    </modules>

    <developers>
        <developer>
            <name>Jakub Bereźnicki</name>
            <email>jakub.bereznicki@gmail.com</email>
            <url>https://github.com/Jakubeeee</url>
            <timezone>CEST</timezone>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
    </developers>

    <properties>
        <java.version>14</java.version>
        <project.encoding>UTF-8</project.encoding>

        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>${project.encoding}</project.build.sourceEncoding>
        <project.reporting.outputEncoding>${project.encoding}</project.reporting.outputEncoding>

        <!-- IntelliJ IDEA does not recognize this property, but maven resolves it nonetheless -->
        <!--suppress UnresolvedMavenProperty-->
        <project.root>${maven.multiModuleProjectDirectory}</project.root>

        <duplicate.finder.maven.plugin.version>1.4.0</duplicate.finder.maven.plugin.version>
        <spotbugs.maven.plugin.version>4.0.0</spotbugs.maven.plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>

            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>29.0-jre</version>
                <scope>compile</scope>
            </dependency>

            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>5.5.2</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers</artifactId>
                <version>1.14.1</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>jdbc</artifactId>
                <version>1.14.1</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>postgresql</artifactId>
                <version>1.14.1</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.codehaus.groovy</groupId>
                <artifactId>groovy</artifactId>
                <version>3.0.2</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.dbunit</groupId>
                <artifactId>dbunit</artifactId>
                <version>2.7.0</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.github.springtestdbunit</groupId>
                <artifactId>spring-test-dbunit</artifactId>
                <version>1.3.0</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.awaitility</groupId>
                <artifactId>awaitility</artifactId>
                <version>4.0.2</version>
                <scope>test</scope>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <executions>
                        <execution>
                            <id>deployment-type-profile-group-validation</id>
                            <goals>
                                <goal>enforce</goal>
                            </goals>
                            <configuration>
                                <rules>
                                    <requireProperty>
                                        <property>deployment.type.profile</property>
                                        <message>You must launch maven build with at least one of following profiles:
                                            local-machine-deploy or docker-deploy
                                        </message>
                                    </requireProperty>
                                </rules>
                                <fail>true</fail>
                            </configuration>
                        </execution>
                        <execution>
                            <id>runtime-environment-profile-group-validation</id>
                            <goals>
                                <goal>enforce</goal>
                            </goals>
                            <configuration>
                                <rules>
                                    <requireProperty>
                                        <property>runtime.environment.profile</property>
                                        <message>You must launch maven build with at least one of following profiles:
                                            development or production
                                        </message>
                                    </requireProperty>
                                </rules>
                                <fail>true</fail>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.basepom.maven</groupId>
                    <artifactId>duplicate-finder-maven-plugin</artifactId>
                    <version>${duplicate.finder.maven.plugin.version}</version>
                    <executions>
                        <execution>
                            <id>check-classpath-duplicates</id>
                            <phase>verify</phase>
                            <goals>
                                <goal>check</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>com.github.spotbugs</groupId>
                    <artifactId>spotbugs-maven-plugin</artifactId>
                    <version>${spotbugs.maven.plugin.version}</version>
                    <executions>
                        <execution>
                            <id>analyze-with-spotbugs</id>
                            <phase>verify</phase>
                            <goals>
                                <goal>check</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <effort>Max</effort>
                        <failOnError>false</failOnError>
                        <includeTests>true</includeTests>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <compilerArgs>--enable-preview</compilerArgs>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <forkCount>0</forkCount>
                        <argLine>--enable-preview</argLine>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <configuration>
                        <archive>
                            <addMavenDescriptor>false</addMavenDescriptor>
                        </archive>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <executions>
                        <execution>
                            <id>attach-javadocs</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <additionalJOptions>
                            <additionalJOption>--source=${java.version}</additionalJOption>
                            <additionalJOption>--enable-preview</additionalJOption>
                        </additionalJOptions>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <configuration>
                        <argLine>--enable-preview</argLine>
                    </configuration>
                </plugin>

            </plugins>
        </pluginManagement>
    </build>

    <profiles>

        <profile>
            <id>debug</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.basepom.maven</groupId>
                        <artifactId>duplicate-finder-maven-plugin</artifactId>
                    </plugin>
                    <plugin>
                        <groupId>com.github.spotbugs</groupId>
                        <artifactId>spotbugs-maven-plugin</artifactId>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>javadocs</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>integration-test</id>

            <modules>
                <module>random-number-ws</module>
                <module>random-number-plugin-spi</module>
                <module>random-number-plugin-db</module>
                <module>random-number-plugin-fs</module>
            </modules>

            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-failsafe-plugin</artifactId>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>meteo-plugin</id>

            <modules>
                <module>meteo-plugin</module>
            </modules>
        </profile>

        <!-- //BEGIN// PROFILE GROUP: DEPLOYMENT TYPE -->
        <profile>
            <id>local-machine-deploy</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <properties>
                <deployment.type.profile>local-machine-deploy</deployment.type.profile>
                <core.host>localhost</core.host>
                <core.reserved.host.dir>C:\iotaccess</core.reserved.host.dir>
                <postgres.host>localhost</postgres.host>
                <random.number.ws>localhost</random.number.ws>
            </properties>
        </profile>

        <profile>
            <id>docker-deploy</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <deployment.type.profile>docker-deploy</deployment.type.profile>
                <core.host>core</core.host>
                <core.reserved.host.dir>opt/iotaccess</core.reserved.host.dir>
                <postgres.host>postgres12</postgres.host>
                <random.number.ws>random-number-ws</random.number.ws>
            </properties>
        </profile>
        <!-- //END// PROFILE GROUP: DEPLOYMENT TYPE -->

        <!-- //BEGIN// PROFILE GROUP: RUNTIME ENVIRONMENT -->
        <profile>
            <id>development</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <runtime.environment.profile>development</runtime.environment.profile>
                <spring.jpa.hibernate.ddl-auto>create-drop</spring.jpa.hibernate.ddl-auto>
            </properties>
        </profile>

        <profile>
            <id>production</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <properties>
                <runtime.environment.profile>production</runtime.environment.profile>
                <spring.jpa.hibernate.ddl-auto>update</spring.jpa.hibernate.ddl-auto>
            </properties>
        </profile>
        <!-- //END// PROFILE GROUP: RUNTIME ENVIRONMENT -->

    </profiles>

</project>